[package]
name = "xspotify-re"
version = "0.1.0"
authors = ["aesCyprian <aesCyprian@protonmail.ch>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking", "json"] }

log = "0.4.0"
env_logger = "0.7.1"

serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"

hex = "0.4.2"
aes-ctr = "0.3.0"